# QuickCRUD

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
quickcrud/: cli.py
